# network-security-classroom

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
specs/: 0001-core-learning-shell.md  0002-arp-discovery-lab.md  0003-optional-live-arp-backend.md  0004-tcp-handshake-lab.md  0005-dns-metadata-lab.md  0006-exploration-mode.md  0007-tls-metadata-lesson.md  0008-ask-mode.md  0009-tls-certificate-lab.md  0010-http-headers-lab.md  0011-certificate-trust-interpretation.md  0012-ask-mode-memory.md  0013-attacker-mindset.md
src/network_security_classroom/: __init__.py  __main__.py  ask.py  cli.py  config.py  content.py  explore.py  labs.py  lessons.py  memory.py  notes.py
src/network_security_classroom/content/lessons/: attacker-mindset.md  handshake.md  host.md  tls-metadata.md  zero-day.md
src/network_security_classroom/content/topics/: attacker-mindset.md  detection.md  dns.md  firewalls.md  handshake.md  hosts.md  metadata.md  services.md  tls.md  zero-day.md
tests/: test_ask.py  test_cli.py  test_config.py  test_explore.py  test_labs.py  test_lessons.py  test_memory.py  test_notes.py
