[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-security-classroom"
version = "0.1.0"
description = "A defensive CLI for learning networking and modern security concepts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]
live = [
  "scapy>=2.5.0",
]

[project.scripts]
nsc = "network_security_classroom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider --cov=src/network_security_classroom --cov-report=term-missing"
